data/derived/sp14/progs/unify/prog0459.ml.out
Characters 215-225:
  if (randNum = 1 && randNum2 = 4) then buildSine(buildOp2(buildX())) else
                                                          ^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr * expr * 'a
